--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <title>
+            HTML Academy: Девайс
+        </title>
+    </head>
+    <body>
+        <header class="main-header">
+            <nav class="main-navigation">
+                <a class="main-header-logo">
+                    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+                </a>
+                <ul>
+                    <li>
+                        <a href="catalog.html">
+                            Каталог товаров
+                        </a>
+                    </li>
+                    <li>
+                        <a href="delivery.html">
+                            Доставка
+                        </a>
+                    </li>
+                    <li>
+                        <a href="warranty.html">
+                            Гарантия
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">
+                            Контакты
+                        </a>
+                    </li>
+                </ul>
+                <ul class="user-navigation">
+                    <input type="search" placeholder="Поиск по сайту">
+                    <li class="login-link">
+                        Войти
+                    </li>
+                </ul>
+                <ul class="buy">
+                    <li class="compare">
+                        Сравнить
+                    </li>
+                    <li class="basket">
+                        Корзина
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+    </body>
 </html>
