Create main sliders & item-list

--- a/index.html
+++ b/index.html
@@ -51,6 +51,109 @@
             </nav>
         </header>
         
+        <main class="container">
+            <h1 class="visually-hidden">
+                Интернет магазин дизайнерских гаджетов «Device»
+            </h1>
+
+            <section class="best-items-slider">
+                <h2 class="visually-hidden">
+                    Лучший товар
+                </h2>
+                <a class="first-slider">
+                    <img src="http://placehold.it/250x250" width="250" height="250" alt="Селфи палка">
+                </a>
+                <b>
+                    Делай селфи, как Бен Стиллер!
+                </b>
+                <p>
+                    Самая длинная палка для селфи доступна в нашем магазине.
+                    Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+                </p>
+                <a class="button" href="more-selfie.html">
+                    Подробнее
+                </a>
+                <table class="features">
+                    <tr>
+                        <td>
+                            8,5 м
+                        </td>
+                        <td>
+                            5кг
+                        </td>                     
+                        <td>
+                            Карбон
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Длина палки
+                        </td>
+                        <td>
+                            Вес палки
+                        </td>
+                        <td>
+                            Материал
+                        </td>
+                    </tr>
+                </table>
+            </section>
+
+            <section class="items">
+                <ul class="item-list">
+                    <li>
+                        <div>
+                            <a href="#"></a>
+                            <p>
+                                Виртуальная реальность
+                            </p>
+                        </div>
+                    </li>
+                    <li>    
+                        <!--Картинки будут фоном-->
+                        <div>
+                            <a href="#"></a>
+                            <p>
+                                Моноподы для селфи
+                            </p>
+                        </div>
+                    </li>
+                    <li>     
+                        <div>
+                            <a href="#"></a>
+                            <p>
+                                Экшн-камеры
+                            </p>
+                        </div>
+                    </li>
+                    <li>     
+                        <div>
+                            <a href="#"></a>
+                            <p>
+                                Фитнес-браслеты
+                            </p>
+                        </div>
+                    </li>
+                    <li>     
+                        <div>
+                            <a href="#"></a>
+                            <p>
+                                Умные часы
+                            </p>
+                        </div>
+                    </li>
+                    <li>     
+                        <div>
+                            <a href="#"></a>
+                            <p>
+                                Квадрокоптеры
+                            </p>
+                        </div>
+                    </li>     
+                </ul>
+            </section>
+
+        </main>
 
     </body>
 </html>
