Create services slider

--- a/index.html
+++ b/index.html
@@ -153,6 +153,35 @@
                 </ul>
             </section>
 
+            <section class="pagination-helper-slider">
+                <ul class="help-list">
+                    <li class="pagination-helper pagination-helper-current">
+                        <a href="#">
+                            Доставка
+                        </a>
+                    </li>
+                    <li class="pagination-helper">
+                        <a href="#">
+                            Гарантия
+                        </a>
+                    </li>
+                    <li class="pagination-helper">
+                        <a href="#">
+                            Кредит
+                        </a>
+                    </li>
+                    <div class="text">
+                        <b>
+                            Доставка
+                        </b>
+                        <p>
+                            Мы с удовольствием доставим ваш товар прямо к вашему подъезду
+                            совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+                        </p>
+                    </div>
+                </ul>
+            </section>
+
         </main>
 
     </body>
