--- a/index.html
+++ b/index.html
@@ -156,30 +156,86 @@
             <section class="pagination-helper-slider">
                 <ul class="help-list">
                     <li class="pagination-helper pagination-helper-current">
-                        <a href="#">
+                        <span class="button button-delivery">
                             Доставка
-                        </a>
+                        </span>
                     </li>
                     <li class="pagination-helper">
-                        <a href="#">
+                        <span class="button button-warranty">
                             Гарантия
-                        </a>
+                        </span>
                     </li>
                     <li class="pagination-helper">
-                        <a href="#">
+                        <span class="button button-credit">
                             Кредит
-                        </a>
+                        </span>
                     </li>
                     <div class="text">
-                        <b>
+                        <h2>
                             Доставка
-                        </b>
+                        </h2>
                         <p>
                             Мы с удовольствием доставим ваш товар прямо к вашему подъезду
                             совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
                         </p>
                     </div>
                 </ul>
+            </section>
+
+            <div class="logo-companies">
+                <div class="logo-1">
+                </div>
+                <div class="logo-2">
+                </div>
+                <div class="logo-3">
+                </div>
+                <div class="logo-4">
+                </div>
+            </div>
+
+            <section class="about-us">
+                <h3>
+                    О нас
+                </h3>
+                <div class="text-about-us">
+                    <p>
+                        Огромный выбор гаджетов не оставит равнодушным гика, 
+                        который есть в каждом из нас.
+                    </p>
+                    <p>
+                        Мы можем доставить ваш товар в самые отдаленные точки России!
+                        DEVICE работает со многими транспортными компаниям.
+                    </p>
+                </div>  
+                <ul>
+                    <li>
+                        Деловые Линии
+                    </li>
+                    <li>
+                        Автотрейдинг
+                    </li>
+                    <li>
+                        ЖелДорЭкспедиция
+                    </li>
+                </ul>  
+                <a class="button" href="#">
+                    Подробнее о нас
+                </a>
+            </section>
+
+            <section class="contacts">
+                <h3>
+                    Контакты
+                </h3>
+                <div class="text-contacts">
+                    <p>
+                        Вы можете забрать товар сами, заехав в наш офис. 
+                        Заодно, вы сможете поверить работоспособность покупки. Всякое бывает
+                    </p>
+                    </div>
+                    <a class="button" href="#">
+                        Напишите нам
+                    </a>
             </section>
 
         </main>
