--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                     </li>
                 </ul>
                 <ul class="user-navigation">
-                    <input type="search" placeholder="Поиск по сайту">
+                    <li class="search">
+                        <input type="search" placeholder="Поиск по сайту">
+                    </li>
                     <li class="login-link">
                         Войти
                     </li>
@@ -100,6 +102,9 @@
             </section>
 
             <section class="items">
+                <h2 class="visually-hidden">
+                    Выбор товара 
+                </h2>
                 <ul class="item-list">
                     <li>
                         <div>
@@ -170,16 +175,16 @@
                             Кредит
                         </span>
                     </li>
+                </ul>    
                     <div class="text">
-                        <h2>
+                        <h3>
                             Доставка
-                        </h2>
+                        </h3>
                         <p>
                             Мы с удовольствием доставим ваш товар прямо к вашему подъезду
                             совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
                         </p>
                     </div>
-                </ul>
             </section>
 
             <div class="logo-companies">
@@ -197,7 +202,7 @@
                 <h3>
                     О нас
                 </h3>
-                <div class="text-about-us">
+                <div class="text text-about-us">
                     <p>
                         Огромный выбор гаджетов не оставит равнодушным гика, 
                         который есть в каждом из нас.
@@ -227,7 +232,7 @@
                 <h3>
                     Контакты
                 </h3>
-                <div class="text-contacts">
+                <div class="text text-contacts">
                     <p>
                         Вы можете забрать товар сами, заехав в наш офис. 
                         Заодно, вы сможете поверить работоспособность покупки. Всякое бывает
