--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
                     <a class="button" href="#">
                         Напишите нам
                     </a>
+                    <section class="modal modal-map">
+                        <span class="modal-close">
+                            x
+                        </span>
+                    </section>
             </section>
 
         </main>
