--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                     <img src="http://placehold.it/250x250" width="250" height="250" alt="Селфи палка">
                 </a>
                 <b>
-                    Делай селфи, как Бен Стиллер!
+                    Делай селфи,<br>
+                    как Бен Стиллер!
                 </b>
                 <p>
                     Самая длинная палка для селфи доступна в нашем магазине.
@@ -247,6 +248,70 @@
                         </span>
                     </section>
             </section>
+
+            <footer class="main-footer">
+                <div>
+                    <a class="main-footer-logo">
+                        <img src="http://placehold.it/150x100" width="150" height="100">
+                    </a>
+                    <p>
+                        г. Москва, ул. Строителей, 15
+                    </p>    
+                </div>
+                <nav class="footer-navigation">
+                    <ul>
+                        <li>
+                            <a href="delivery.html">
+                                Доставка
+                            </a>
+                        </li>
+                        <li>
+                            <a href="warranty.html">
+                                Гарантия
+                            </a>
+                        </li>
+                        <li>
+                            <a href="contacts.html">
+                                Контакты
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="user-navigation">
+                        <li class="login-link">
+                            Войти
+                        </li>
+                        <li class="compare">
+                            Сравнить
+                        </li>
+                        <li class="basket">
+                            Корзина
+                        </li>
+                    </ul>
+                    <ul class="footer-social">
+                        <li>
+                            <a class="social-button facebook">
+                                
+                            </a>
+                        </li>
+                        <li>
+                            <a class="sociak-button instagram">
+
+                            </a>
+                        </li>
+                        <li>
+                            <a class="social-button twitter">
+
+                            </a>
+                        </li>
+                    </ul>>
+                </nav>
+                <p class="phone">
+                    Тел. +7 (495) 495-95-95
+                </p>
+                <a class="logo-html" href="#">
+                    <img src="http://placehold.it/50x50" width="50" height="50">
+                </a>
+            </footer>
 
         </main>
 
