--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
                         Напишите нам
                     </a>
                     <section class="modal modal-map">
+                        <h2 class="visually-hidden">
+                            Как до нас добраться
+                        </h2>
                         <span class="modal-close">
                             x
                         </span>
@@ -252,7 +255,7 @@
             <footer class="main-footer">
                 <div>
                     <a class="main-footer-logo">
-                        <img src="http://placehold.it/150x100" width="150" height="100">
+                        <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
                     </a>
                     <p>
                         г. Москва, ул. Строителей, 15
@@ -308,9 +311,9 @@
                 <p class="phone">
                     Тел. +7 (495) 495-95-95
                 </p>
-                <a class="logo-html" href="#">
-                    <img src="http://placehold.it/50x50" width="50" height="50">
-                </a>
+                <div class="logo-html">
+                    <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
+                </div>
             </footer>
 
         </main>
