--- a/catalog.html
+++ b/catalog.html
@@ -8,120 +8,165 @@
     </head>
     <body>
 
-            <header class="main-header">
-                <nav class="main-navigation">
-                    <a class="main-header-logo">
-                        <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+        <header class="main-header">
+            <nav class="main-navigation">
+                <a class="main-header-logo">
+                    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+                </a>
+                <ul>
+                    <li>
+                        <a href="catalog.html">
+                            Каталог товаров
+                        </a>
+                    </li>
+                    <li>
+                        <a href="delivery.html">
+                            Доставка
+                        </a>
+                    </li>
+                    <li>
+                        <a href="warranty.html">
+                            Гарантия
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">
+                            Контакты
+                        </a>
+                    </li>
+                </ul>
+                <ul class="user-navigation">
+                    <li class="search">
+                        <input type="search" placeholder="Поиск по сайту">
+                    </li>
+                    <li class="login-link">
+                        Войти
+                    </li>
+                </ul>
+                <ul class="buy">
+                    <li class="compare">
+                        Сравнить
+                    </li>
+                    <li class="basket">
+                        Корзина
+                    </li>
+                </ul>
+            </nav>
+         </header>
+
+        <main class="container">
+            <h1 class="page-title">
+                Моноподы для селфи
+            </h1>  
+            <ul class="breadcrumbs">
+                <li>
+                    <a href="index.html">
+                        Главная
                     </a>
-                    <ul>
-                        <li>
-                            <a href="catalog.html">
-                                Каталог товаров
-                            </a>
-                        </li>
-                        <li>
-                            <a href="delivery.html">
-                                Доставка
-                            </a>
-                        </li>
-                        <li>
-                            <a href="warranty.html">
-                                Гарантия
-                            </a>
-                        </li>
-                        <li>
-                            <a href="contacts.html">
-                                Контакты
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="user-navigation">
-                        <li class="search">
-                            <input type="search" placeholder="Поиск по сайту">
-                        </li>
-                        <li class="login-link">
-                            Войти
-                        </li>
-                    </ul>
-                    <ul class="buy">
-                        <li class="compare">
-                            Сравнить
-                        </li>
-                        <li class="basket">
-                            Корзина
-                        </li>
-                    </ul>
-                </nav>
-            </header>
-
-            <main class="container">
-                    
-            </main>
-
-
-
-            <footer class="main-footer">
-                <div>
-                    <a class="main-footer-logo">
-                        <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+                </li>
+                <li>
+                    <a href="catalog.html">
+                        Каталог товаров
                     </a>
-                    <p>
-                        г. Москва, ул. Строителей, 15
-                    </p>    
-                </div>
-                <nav class="footer-navigation">
-                    <ul>
-                        <li>
-                            <a href="delivery.html">
-                                Доставка
-                            </a>
-                        </li>
-                        <li>
-                            <a href="warranty.html">
-                                Гарантия
-                            </a>
-                        </li>
-                        <li>
-                            <a href="contacts.html">
-                                Контакты
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="user-navigation">
-                        <li class="login-link">
-                            Войти
-                        </li>
-                        <li class="compare">
-                            Сравнить
-                        </li>
-                        <li class="basket">
-                            Корзина
-                        </li>
-                    </ul>
-                    <ul class="footer-social">
-                        <li>
-                            <a class="social-button facebook">
+                </li>
+                <li>
+                    <a href="breadcrumbs-current">
+                        Моноподы для селфи
+                    </a>
+                </li>
+            </ul>  
+            <section class="filters">
+                <h2>
+                    Фильтр:
+                </h2>
+                <!--Место для формы-->
+            </section>
+            <div class="sort">
+                <h2>
+                    Сортировка:
+                </h2>
+            <ul>
+                <li>
+                    <a href="#">
+                        По цене
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        По типу
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        По популярности
+                    </a>
+                </li>
+            </ul>
+            </div>
+        </main>
+
+        <footer class="main-footer">
+            <div>
+                <a class="main-footer-logo">
+                    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+                </a>
+                 <p>
+                    г. Москва, ул. Строителей, 15
+                </p>    
+            </div>
+            <nav class="footer-navigation">
+                <ul>
+                    <li>
+                        <a href="delivery.html">
+                            Доставка
+                        </a>
+                    </li>
+                    <li>
+                        <a href="warranty.html">
+                            Гарантия
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">
+                            Контакты
+                        </a>
+                    </li>
+                </ul>
+                <ul class="user-navigation">
+                    <li class="login-link">
+                        Войти
+                    </li>
+                    <li class="compare">
+                        Сравнить
+                    </li>
+                    <li class="basket">
+                        Корзина
+                    </li>
+                </ul>
+                <ul class="footer-social">
+                    <li>
+                        <a class="social-button facebook">
                                 
-                            </a>
-                        </li>
-                        <li>
-                            <a class="sociak-button instagram">
+                        </a>
+                    </li>
+                    <li>
+                        <a class="sociak-button instagram">
 
-                            </a>
-                        </li>
-                        <li>
-                            <a class="social-button twitter">
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-button twitter">
 
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <p class="phone">
-                    Тел. +7 (495) 495-95-95
-                </p>
-                <div class="logo-html">
-                    <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
-                </div>
-            </footer>                
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <p class="phone">
+                Тел. +7 (495) 495-95-95
+            </p>
+            <div class="logo-html">
+                <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
+            </div>
+        </footer>                
     </body>
 </html>
