Create catalog list

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <title>
@@ -75,12 +75,14 @@
                     </a>
                 </li>
             </ul>  
+
             <section class="filters">
                 <h2>
                     Фильтр:
                 </h2>
                 <!--Место для формы-->
             </section>
+
             <div class="sort">
                 <h2>
                     Сортировка:
@@ -103,6 +105,97 @@
                 </li>
             </ul>
             </div>
+            <section class="catalog">
+                <h2 class="visually-hidden">
+                    Каталог селфи-палок
+                </h2>
+                <ul class="catalog-list">
+                    <li class="catalog-item">
+                        <h3>
+                            <a href="catalog-item.html">
+                                Любительская селфи-палка
+                            </a>
+                        </h3>
+                        <p>
+                            <a href="catalog-item-image">
+                                <img src="http://placehold.it/200x200" width="200" height="200" alt="Любительская селфи-палка">
+                            </a>
+                        </p>
+                        <p class="catalog-item-price">
+                            500 руб.
+                        </p>
+                    </li>
+                    <li class="catalog-item">
+                        <h3>
+                            <a href="catalog-item.html">
+                                Профессиональная селфи-палка
+                            </a>
+                        </h3>
+                        <p>
+                            <a href="catalog-item-image">
+                                <img src="http://placehold.it/200x200" width="200" height="200" alt="Профессиональная селфи-палка">
+                            </a>
+                        </p>
+                        <p class="catalog-item-price">
+                            1 500 руб.
+                        </p>
+                    </li>
+                    <li class="catalog-item">
+                        <h3>
+                            <a href="catalog-item.html">
+                                Непотопляемая селфи-палка
+                            </a>
+                        </h3>
+                        <p>
+                            <a href="catalog-item-image">
+                                <img src="http://placehold.it/200x200" width="200" height="200" alt="Непотопляемая селфи-палка">
+                            </a>
+                        </p>
+                        <p class="catalog-item-price">
+                            2 500 руб.
+                        </p>
+                    </li>
+                    <li class="catalog-item">
+                        <h3>
+                            <a href="catalog-item.html">
+                                Селфи-палка «Следуй за мной»
+                            </a>
+                        </h3>
+                        <p>
+                            <a href="catalog-item-image">
+                                <img src="http://placehold.it/200x200" width="200" height="200" alt="Селфи-палка «Следуй за мной»">
+                            </a>
+                        </p>
+                        <p class="catalog-item-price">
+                           4 900 руб.
+                        </p>
+                    </li>
+                </ul>
+                <ul class="pagination-list">
+                    <li class="pagination-item pagination-item-current">
+                        <a href="#">
+                            1
+                        </a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">
+                            2
+                        </a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">
+                            3
+                        </a>
+                    </li>
+                </ul>
+                <span class="button catalog-item-button catalog-item-button-back">
+                    Назад
+                </span>
+                <span class="button catalog-item-button catalog-item-button-next">
+                    Вперед
+                </span>
+            </section>
+
         </main>
 
         <footer class="main-footer">
@@ -136,6 +229,8 @@
                     <li class="login-link">
                         Войти
                     </li>
+                </ul>
+                <ul class="buy">    
                     <li class="compare">
                         Сравнить
                     </li>
