--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </title>
     </head>
     <body>
-        
+
         <header class="main-header">
             <nav class="main-navigation">
                 <a class="main-header-logo">
@@ -284,6 +284,8 @@
                         <li class="login-link">
                             Войти
                         </li>
+                    </ul>
+                    <ul class="buy">    
                         <li class="compare">
                             Сравнить
                         </li>
