--- a/catalog.html
+++ b/catalog.html
@@ -40,15 +40,21 @@
                         <input type="search" placeholder="Поиск по сайту">
                     </li>
                     <li class="login-link">
-                        Войти
+                        <a href="#">
+                            Войти
+                        </a>    
                     </li>
                 </ul>
                 <ul class="buy">
                     <li class="compare">
-                        Сравнить
+                        <a href="#">
+                            Сравнить
+                        </a>    
                     </li>
                     <li class="basket">
-                        Корзина
+                        <a href="#">
+                            Корзина
+                        </a>    
                     </li>
                 </ul>
             </nav>
@@ -188,12 +194,18 @@
                         </a>
                     </li>
                 </ul>
-                <span class="button catalog-item-button catalog-item-button-back">
-                    Назад
-                </span>
-                <span class="button catalog-item-button catalog-item-button-next">
-                    Вперед
-                </span>
+                <ul class="catalog-item-button">
+                    <li class="button catalog-item-button-back">
+                        <a href="#">
+                            Назад
+                        </a>
+                    </li>  
+                    <li class="button catalog-item-button-next">
+                        <a href="#">
+                            Вперед
+                        </a>
+                    </li>    
+                </ul>
             </section>
 
         </main>
@@ -226,16 +238,22 @@
                     </li>
                 </ul>
                 <ul class="user-navigation">
-                    <li class="login-link">
-                        Войти
+                    <li class="login-link">\
+                        <a href="#">
+                            Войти
+                        </a>                            
                     </li>
                 </ul>
                 <ul class="buy">    
                     <li class="compare">
-                        Сравнить
+                        <a href="#">
+                            Сравнить
+                        </a>
                     </li>
                     <li class="basket">
-                        Корзина
+                        <a href="#">
+                            Корзина
+                        </a>
                     </li>
                 </ul>
                 <ul class="footer-social">
@@ -245,7 +263,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="sociak-button instagram">
+                        <a class="social-button instagram">
 
                         </a>
                     </li>
@@ -260,7 +278,9 @@
                 Тел. +7 (495) 495-95-95
             </p>
             <div class="logo-html">
-                <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
+                <a href="https://htmlacademy.ru/intensive/htmlcss">
+                    <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
+                </a>    
             </div>
         </footer>                
     </body>
