--- a/index.html
+++ b/index.html
@@ -40,15 +40,21 @@
                         <input type="search" placeholder="Поиск по сайту">
                     </li>
                     <li class="login-link">
-                        Войти
+                        <a href="#">
+                            Войти
+                        </a>
                     </li>
                 </ul>
                 <ul class="buy">
                     <li class="compare">
-                        Сравнить
+                        <a href="#">
+                            Сравнить
+                        </a>
                     </li>
                     <li class="basket">
-                        Корзина
+                        <a href="#">
+                            Корзина
+                        </a>
                     </li>
                 </ul>
             </nav>
@@ -109,53 +115,59 @@
                 </h2>
                 <ul class="item-list">
                     <li>
-                        <div>
-                            <a href="#"></a>
+                        <a href="#">
+                            <div>     
+                                <!--Картинки будут фоном дивов-->                  
+                            </div>
                             <p>
                                 Виртуальная реальность
                             </p>
-                        </div>
+                        </a>    
                     </li>
-                    <li>    
-                        <!--Картинки будут фоном-->
-                        <div>
-                            <a href="#"></a>
+                    <li>  
+                        <a href="#">  
+                            <div>                               
+                            </div>
                             <p>
                                 Моноподы для селфи
                             </p>
-                        </div>
+                        </a>    
                     </li>
-                    <li>     
-                        <div>
-                            <a href="#"></a>
+                    <li>    
+                        <a href="#"> 
+                            <div>
+                            </div>
                             <p>
                                 Экшн-камеры
                             </p>
-                        </div>
+                        </a>
                     </li>
                     <li>     
-                        <div>
-                            <a href="#"></a>
+                        <a href="#">
+                            <div>
+                            </div>
                             <p>
                                 Фитнес-браслеты
-                            </p>
-                        </div>
+                            </p>                            
+                        </a>
                     </li>
-                    <li>     
-                        <div>
-                            <a href="#"></a>
+                    <li>   
+                        <a href="#">  
+                            <div>
+                            </div>
                             <p>
                                 Умные часы
                             </p>
-                        </div>
+                        </a>
                     </li>
-                    <li>     
-                        <div>
-                            <a href="#"></a>
+                    <li> 
+                        <a href="#">
+                            <div>                                
+                            </div>
                             <p>
                                 Квадрокоптеры
-                            </p>
-                        </div>
+                            </p>    
+                        </a>    
                     </li>     
                 </ul>
             </section>
@@ -190,14 +202,22 @@
             </section>
 
             <div class="logo-companies">
-                <div class="logo-1">
-                </div>
-                <div class="logo-2">
-                </div>
-                <div class="logo-3">
-                </div>
-                <div class="logo-4">
-                </div>
+                <a href="#">
+                    <div class="logo-1">
+                    </div>
+                </a>    
+                <a href="#">
+                    <div class="logo-2">
+                    </div>
+                </a>
+                <a href="#">    
+                    <div class="logo-3">
+                    </div>
+                </a>    
+                <a href="#">
+                    <div class="logo-4">
+                    </div>
+                </a>    
             </div>
 
             <section class="about-us">
@@ -247,9 +267,9 @@
                         <h2 class="visually-hidden">
                             Как до нас добраться
                         </h2>
-                        <span class="modal-close">
+                        <button class="modal-close">
                             x
-                        </span>
+                        </button>
                     </section>
             </section>
 
@@ -282,15 +302,21 @@
                     </ul>
                     <ul class="user-navigation">
                         <li class="login-link">
-                            Войти
+                            <a href="#">
+                                Войти
+                            </a>
                         </li>
                     </ul>
                     <ul class="buy">    
                         <li class="compare">
-                            Сравнить
+                            <a href="#">
+                                Сравнить
+                            </a>
                         </li>
                         <li class="basket">
-                            Корзина
+                            <a href="#">
+                                Корзина
+                            </a>
                         </li>
                     </ul>
                     <ul class="footer-social">
@@ -315,7 +341,9 @@
                     Тел. +7 (495) 495-95-95
                 </p>
                 <div class="logo-html">
-                    <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
+                    <a href="https://htmlacademy.ru/intensive/htmlcss">
+                        <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
+                    </a>    
                 </div>
             </footer>
 
