--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 
         <header class="main-header">
             <nav class="main-navigation">
-                <a class="main-header-logo">
+                <a href="index.html" class="main-header-logo">
                     <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
                 </a>
                 <ul>
@@ -111,6 +111,7 @@
                 </li>
             </ul>
             </div>
+
             <section class="catalog">
                 <h2 class="visually-hidden">
                     Каталог селфи-палок
@@ -121,12 +122,10 @@
                             <a href="catalog-item.html">
                                 Любительская селфи-палка
                             </a>
-                        </h3>
-                        <p>
+                        </h3>                        
                             <a href="catalog-item-image">
                                 <img src="http://placehold.it/200x200" width="200" height="200" alt="Любительская селфи-палка">
-                            </a>
-                        </p>
+                            </a>                        
                         <p class="catalog-item-price">
                             500 руб.
                         </p>
@@ -136,12 +135,10 @@
                             <a href="catalog-item.html">
                                 Профессиональная селфи-палка
                             </a>
-                        </h3>
-                        <p>
+                        </h3>                      
                             <a href="catalog-item-image">
                                 <img src="http://placehold.it/200x200" width="200" height="200" alt="Профессиональная селфи-палка">
-                            </a>
-                        </p>
+                            </a>                        
                         <p class="catalog-item-price">
                             1 500 руб.
                         </p>
@@ -151,12 +148,10 @@
                             <a href="catalog-item.html">
                                 Непотопляемая селфи-палка
                             </a>
-                        </h3>
-                        <p>
+                        </h3>                        
                             <a href="catalog-item-image">
                                 <img src="http://placehold.it/200x200" width="200" height="200" alt="Непотопляемая селфи-палка">
-                            </a>
-                        </p>
+                            </a>                        
                         <p class="catalog-item-price">
                             2 500 руб.
                         </p>
@@ -166,12 +161,10 @@
                             <a href="catalog-item.html">
                                 Селфи-палка «Следуй за мной»
                             </a>
-                        </h3>
-                        <p>
+                        </h3>                        
                             <a href="catalog-item-image">
                                 <img src="http://placehold.it/200x200" width="200" height="200" alt="Селфи-палка «Следуй за мной»">
-                            </a>
-                        </p>
+                            </a>                        
                         <p class="catalog-item-price">
                            4 900 руб.
                         </p>
