--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <header class="main-header">
             <nav class="main-navigation">
-                <a class="main-header-logo">
+                <a href="index.html" class="main-header-logo">
                     <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
                 </a>
                 <ul>
@@ -37,7 +37,9 @@
                 </ul>
                 <ul class="user-navigation">
                     <li class="search">
-                        <input type="search" placeholder="Поиск по сайту">
+                        <form>
+                            <input type="search" placeholder="Поиск по сайту">
+                        </form>    
                     </li>
                     <li class="login-link">
                         <a href="#">
@@ -116,27 +118,23 @@
                 <ul class="item-list">
                     <li>
                         <a href="#">
-                            <div>     
-                                <!--Картинки будут фоном дивов-->                  
-                            </div>
+                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Очки виртуальной реальности">                          
                             <p>
                                 Виртуальная реальность
                             </p>
                         </a>    
                     </li>
                     <li>  
-                        <a href="#">  
-                            <div>                               
-                            </div>
+                        <a href="#">
+                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Монопод для селфи">                        
                             <p>
                                 Моноподы для селфи
                             </p>
                         </a>    
                     </li>
                     <li>    
-                        <a href="#"> 
-                            <div>
-                            </div>
+                        <a href="#">
+                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Экшн-камера">                        
                             <p>
                                 Экшн-камеры
                             </p>
@@ -144,17 +142,15 @@
                     </li>
                     <li>     
                         <a href="#">
-                            <div>
-                            </div>
+                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Фитнес-браслет">                        
                             <p>
                                 Фитнес-браслеты
                             </p>                            
                         </a>
                     </li>
                     <li>   
-                        <a href="#">  
-                            <div>
-                            </div>
+                        <a href="#">
+                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Умные часы">                            
                             <p>
                                 Умные часы
                             </p>
@@ -162,8 +158,7 @@
                     </li>
                     <li> 
                         <a href="#">
-                            <div>                                
-                            </div>
+                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Квадрокоптер">                        
                             <p>
                                 Квадрокоптеры
                             </p>    
@@ -202,21 +197,17 @@
             </section>
 
             <div class="logo-companies">
-                <a href="#">
-                    <div class="logo-1">
-                    </div>
+                <a class="logo-item" href="#">
+                    <img src="http://placehold.it/150x100" width="150" height="100" alt="DJI">
                 </a>    
-                <a href="#">
-                    <div class="logo-2">
-                    </div>
+                <a class="logo-item" href="#">
+                    <img src="http://placehold.it/150x100" width="150" height="100" alt="SPGadgets">
                 </a>
-                <a href="#">    
-                    <div class="logo-3">
-                    </div>
+                <a class="logo-item" href="#">    
+                    <img src="http://placehold.it/150x100" width="150" height="100" alt="GoPro">
                 </a>    
-                <a href="#">
-                    <div class="logo-4">
-                    </div>
+                <a class="logo-item" href="#">
+                    <img src="http://placehold.it/150x100" width="150" height="100" alt="VIVE">
                 </a>    
             </div>
 
