Add images for index.  Change main and footer logos

--- a/catalog.html
+++ b/catalog.html
@@ -10,8 +10,8 @@
 
         <header class="main-header">
             <nav class="main-navigation">
-                <a href="index.html" class="main-header-logo">
-                    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+                <a class="main-header-logo" href="index.html">
+                    Device
                 </a>
                 <ul>
                     <li>
@@ -205,8 +205,8 @@
 
         <footer class="main-footer">
             <div>
-                <a class="main-footer-logo">
-                    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+                <a class="main-footer-logo" href="index.html">
+                    Device
                 </a>
                  <p>
                     г. Москва, ул. Строителей, 15
