--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
         <header class="main-header">
             <nav class="main-navigation">
-                <a href="index.html" class="main-header-logo">
-                    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+                <a class="main-header-logo" href="index.html">
+                    Device
                 </a>
                 <ul>
                     <li>
@@ -72,7 +72,7 @@
                     Лучший товар
                 </h2>
                 <a class="first-slider">
-                    <img src="http://placehold.it/250x250" width="250" height="250" alt="Селфи палка">
+                    <img src="img/selfie-branch.png" width="384" height="486" alt="Селфи-палка">
                 </a>
                 <b>
                     Делай селфи,<br>
@@ -118,7 +118,7 @@
                 <ul class="item-list">
                     <li>
                         <a href="#">
-                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Очки виртуальной реальности">                          
+                            <img src="img/virtual-glasses.png" width="160" height="160" alt="Очки виртуальной реальности">                          
                             <p>
                                 Виртуальная реальность
                             </p>
@@ -126,7 +126,7 @@
                     </li>
                     <li>  
                         <a href="#">
-                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Монопод для селфи">                        
+                            <img src="img/monopod.png" width="160" height="160" alt="Монопод для селфи">                        
                             <p>
                                 Моноподы для селфи
                             </p>
@@ -134,7 +134,7 @@
                     </li>
                     <li>    
                         <a href="#">
-                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Экшн-камера">                        
+                            <img src="img/action-camera.png" width="160" height="160" alt="Экшн-камера">                        
                             <p>
                                 Экшн-камеры
                             </p>
@@ -142,7 +142,7 @@
                     </li>
                     <li>     
                         <a href="#">
-                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Фитнес-браслет">                        
+                            <img src="img/fitness-bracelet.png" width="160" height="160" alt="Фитнес-браслет">                        
                             <p>
                                 Фитнес-браслеты
                             </p>                            
@@ -150,7 +150,7 @@
                     </li>
                     <li>   
                         <a href="#">
-                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Умные часы">                            
+                            <img src="img/smart-watch.png" width="160" height="160" alt="Умные часы">                            
                             <p>
                                 Умные часы
                             </p>
@@ -158,7 +158,7 @@
                     </li>
                     <li> 
                         <a href="#">
-                            <img src="http://placehold.it/150x150" width="150" height="150" alt="Квадрокоптер">                        
+                            <img src="img/quadrupter.png" width="160" height="160" alt="Квадрокоптер">                        
                             <p>
                                 Квадрокоптеры
                             </p>    
@@ -198,16 +198,16 @@
 
             <div class="logo-companies">
                 <a class="logo-item" href="#">
-                    <img src="http://placehold.it/150x100" width="150" height="100" alt="DJI">
+                    <img src="img/logo-dji.png" width="260" height="100" alt="Логотип DJI">
                 </a>    
                 <a class="logo-item" href="#">
-                    <img src="http://placehold.it/150x100" width="150" height="100" alt="SPGadgets">
+                    <img src="img/logo-sp.png" width="260" height="100" alt="Логотип SPGadgets">
                 </a>
                 <a class="logo-item" href="#">    
-                    <img src="http://placehold.it/150x100" width="150" height="100" alt="GoPro">
+                    <img src="img/gopro.png" width="260" height="100" alt="Логотип GoPro">
                 </a>    
                 <a class="logo-item" href="#">
-                    <img src="http://placehold.it/150x100" width="150" height="100" alt="VIVE">
+                    <img src="img/vive.png" width="260" height="100" alt="Логотип VIVE">
                 </a>    
             </div>
 
@@ -266,8 +266,8 @@
 
             <footer class="main-footer">
                 <div>
-                    <a class="main-footer-logo">
-                        <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип «Device»">
+                    <a class="main-footer-logo" href="index.html">
+                        Device
                     </a>
                     <p>
                         г. Москва, ул. Строителей, 15
