--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         Вы можете забрать товар сами, заехав в наш офис. 
                         Заодно, вы сможете поверить работоспособность покупки. Всякое бывает
                     </p>
-                    </div>
+                </div>
                     <a class="button" href="#">
                         Напишите нам
                     </a>
@@ -258,6 +258,7 @@
                         <h2 class="visually-hidden">
                             Как до нас добраться
                         </h2>
+                        <img src="img/map.png" width="560" height="222" alt="Адрес магазина «Device» ул. Строителей, 15">
                         <button class="modal-close">
                             x
                         </button>
@@ -313,17 +314,17 @@
                     <ul class="footer-social">
                         <li>
                             <a class="social-button facebook">
-                                
+                                <img src="img/facebook.png" width="32" height="32" alt="Присоединяйся в facebook">
                             </a>
                         </li>
                         <li>
-                            <a class="sociak-button instagram">
-
+                            <a class="social-button instagram">
+                                <img src="img/instagram.png" width="32" height="32" alt="Присоединяйся в instagram">
                             </a>
                         </li>
                         <li>
                             <a class="social-button twitter">
-
+                                <img src="img/twitter.png" width="32" height="32" alt="Присоединяйся в twitter">
                             </a>
                         </li>
                     </ul>
@@ -333,7 +334,7 @@
                 </p>
                 <div class="logo-html">
                     <a href="https://htmlacademy.ru/intensive/htmlcss">
-                        <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
+                        <img src="img/logo-html.png" width="27" height="35" alt="Логотип HTMLacademy">
                     </a>    
                 </div>
             </footer>
