Add images of item-list in the catalog.

--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
                             </a>
                         </h3>                        
                             <a href="catalog-item-image">
-                                <img src="http://placehold.it/200x200" width="200" height="200" alt="Любительская селфи-палка">
+                                <img src="img/selfie-hand.png" width="360" height="380" alt="Любительская селфи-палка">
                             </a>                        
                         <p class="catalog-item-price">
                             500 руб.
@@ -137,7 +137,7 @@
                             </a>
                         </h3>                      
                             <a href="catalog-item-image">
-                                <img src="http://placehold.it/200x200" width="200" height="200" alt="Профессиональная селфи-палка">
+                                <img src="img/professional-stick.png" width="360" height="380" alt="Профессиональная селфи-палка">
                             </a>                        
                         <p class="catalog-item-price">
                             1 500 руб.
@@ -149,8 +149,8 @@
                                 Непотопляемая селфи-палка
                             </a>
                         </h3>                        
-                            <a href="catalog-item-image">
-                                <img src="http://placehold.it/200x200" width="200" height="200" alt="Непотопляемая селфи-палка">
+                            <a href="catalog-item-image" >
+                                <img src="img/not-drowned-stick.png" width="360" height="380" alt="Непотопляемая селфи-палка">
                             </a>                        
                         <p class="catalog-item-price">
                             2 500 руб.
@@ -163,7 +163,7 @@
                             </a>
                         </h3>                        
                             <a href="catalog-item-image">
-                                <img src="http://placehold.it/200x200" width="200" height="200" alt="Селфи-палка «Следуй за мной»">
+                                <img src="img/follow-me.png" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                             </a>                        
                         <p class="catalog-item-price">
                            4 900 руб.
@@ -252,27 +252,27 @@
                 <ul class="footer-social">
                     <li>
                         <a class="social-button facebook">
-                                
+                            <img src="img/facebook.png" width="32" height="32" alt="Присоединяйся в facebook">
                         </a>
                     </li>
                     <li>
                         <a class="social-button instagram">
-
+                            <img src="img/instagram.png" width="32" height="32" alt="Присоединяйся в instagram">
                         </a>
                     </li>
                     <li>
                         <a class="social-button twitter">
-
+                            <img src="img/twitter.png" width="32" height="32" alt="Присоединяйся в twitter">
                         </a>
                     </li>
-                </ul>
+                </ul>    
             </nav>
             <p class="phone">
                 Тел. +7 (495) 495-95-95
             </p>
             <div class="logo-html">
                 <a href="https://htmlacademy.ru/intensive/htmlcss">
-                    <img src="http://placehold.it/50x50" width="50" height="50" alt="Логотип HTMLacademy">
+                    <img src="img/logo-html.png" width="27" height="35" alt="Логотип HTMLacademy">
                 </a>    
             </div>
         </footer>                
