Change png to svg in logos

--- a/index.html
+++ b/index.html
@@ -314,17 +314,17 @@
                     <ul class="footer-social">
                         <li>
                             <a class="social-button facebook">
-                                <img src="img/facebook.png" width="32" height="32" alt="Присоединяйся в facebook">
+                                <img src="img/facebook.svg" width="32" height="32" alt="Присоединяйся в facebook">
                             </a>
                         </li>
                         <li>
                             <a class="social-button instagram">
-                                <img src="img/instagram.png" width="32" height="32" alt="Присоединяйся в instagram">
+                                <img src="img/instagram.svg" width="32" height="32" alt="Присоединяйся в instagram">
                             </a>
                         </li>
                         <li>
                             <a class="social-button twitter">
-                                <img src="img/twitter.png" width="32" height="32" alt="Присоединяйся в twitter">
+                                <img src="img/twitter.svg" width="32" height="32" alt="Присоединяйся в twitter">
                             </a>
                         </li>
                     </ul>
@@ -334,7 +334,7 @@
                 </p>
                 <div class="logo-html">
                     <a href="https://htmlacademy.ru/intensive/htmlcss">
-                        <img src="img/logo-html.png" width="27" height="35" alt="Логотип HTMLacademy">
+                        <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTMLacademy">
                     </a>    
                 </div>
             </footer>
